test: update resource files with invalid/valid sections

--- a/resource/all-cases.conf
+++ b/resource/all-cases.conf
@@ -1,20 +1,106 @@
 // ============================================================
-// Test Case: Simple Key-Value Pairs
+// INVALID (unformatted input)
 // ============================================================
+
+# Simple Key-Value Pairs (hash comment, colon separator, no spaces)
+key:"value"
+name  :   "hoconfmt"
+version="1.0.0"
+
+# Dotted Key Paths (inconsistent spacing)
+server.host="localhost"
+server.port=8080
+database.connection.timeout =30
+
+# Nested Objects (brace on new line, inconsistent indent)
+server
+{
+    host = "localhost"
+     port = 8080
+  ssl
+  {
+enabled = true
+      certificate = "/path/to/cert.pem"
+  }
+}
+
+# Arrays (wrong formatting)
+ports=[8080,8081,8082]
+names=["alpha","beta","gamma"]
+enabled = [true,false,true]
+
+# Long Arrays (no proper multiline)
+servers=["server1.example.com","server2.example.com","server3.example.com","server4.example.com","server5.example.com"]
+
+# Variable Substitution (spacing issues)
+base-path="/app"
+config-path=${base-path}"/config"
+optional-path=${?CUSTOM_PATH}
+
+# Include Statements
+include"common.conf"
+include "database.conf"
+
+# Numbers (spacing issues)
+integer=42
+negative=-10
+float=3.14159
+exponent=1.5e10
+
+# Booleans and Null
+enabled=true
+disabled=false
+empty=null
+
+# Multi-line Strings
+description="""This is a
+multi-line string
+with preserved newlines"""
+
+# Complex Nested Structure (bad formatting)
+application{
+name="MyApp"
+version="2.0.0"
+database{
+primary{
+host="db1.example.com"
+port=5432
+credentials{
+username=${secrets.db.username}
+password=${secrets.db.password}
+}
+}
+replica{host="db2.example.com"
+port=5432}
+}
+cache{redis{host="redis.example.com"
+port=6379
+ttl=3600}}
+}
+
+# Mixed Array Types
+mixed=["string",42,true,null]
+
+# Empty Values
+empty-object={}
+empty-array=[]
+empty-string=""
+
+// ============================================================
+// VALID (expected formatted output)
+// ============================================================
+
+// Simple Key-Value Pairs
 key = "value"
 name = "hoconfmt"
 version = "1.0.0"
 
-// ============================================================
-// Test Case: Dotted Key Paths
-// ============================================================
+// Dotted Key Paths
 server.host = "localhost"
 server.port = 8080
 database.connection.timeout = 30
 
-// ============================================================
-// Test Case: Nested Objects
-// ============================================================
+// Nested Objects
 server = {
   host = "localhost"
   port = 8080
@@ -24,16 +110,12 @@ server = {
   }
 }
 
-// ============================================================
-// Test Case: Arrays (Short - Single Line)
-// ============================================================
+// Arrays (short - single line)
 ports = [8080, 8081, 8082]
 names = ["alpha", "beta", "gamma"]
 enabled = [true, false, true]
 
-// ============================================================
-// Test Case: Arrays (Long - Multi Line)
-// ============================================================
+// Long Arrays (multi line)
 servers = [
   "server1.example.com"
   "server2.example.com"
@@ -42,44 +124,32 @@ servers = [
   "server5.example.com"
 ]
 
-// ============================================================
-// Test Case: Variable Substitution
-// ============================================================
+// Variable Substitution
 base-path = "/app"
 config-path = ${base-path}"/config"
 optional-path = ${?CUSTOM_PATH}
 
-// ============================================================
-// Test Case: Include Statements
-// ============================================================
+// Include Statements
 include "common.conf"
 include "database.conf"
 
-// ============================================================
-// Test Case: Numbers
-// ============================================================
+// Numbers
 integer = 42
 negative = -10
 float = 3.14159
 exponent = 1.5e10
 
-// ============================================================
-// Test Case: Booleans and Null
-// ============================================================
+// Booleans and Null
 enabled = true
 disabled = false
 empty = null
 
-// ============================================================
-// Test Case: Multi-line Strings
-// ============================================================
+// Multi-line Strings
 description = """This is a
 multi-line string
 with preserved newlines"""
 
-// ============================================================
-// Test Case: Complex Nested Structure
-// ============================================================
+// Complex Nested Structure
 application = {
   name = "MyApp"
   version = "2.0.0"
@@ -106,17 +176,9 @@ application = {
       ttl = 3600
     }
   }
-
-  features = {
-    new-ui = true
-    beta-features = false
-    experimental = ${?ENABLE_EXPERIMENTAL}
-  }
 }
 
-// ============================================================
-// Test Case: Mixed Array Types
-// ============================================================
+// Mixed Array Types
 mixed = [
   "string"
   42
@@ -124,31 +186,7 @@ mixed = [
   null
 ]
 
-// ============================================================
-// Test Case: Comments Styles (will be normalized to //)
-// ============================================================
-// This is a slash comment
-key1 = "value1"
-
-// This was a hash comment (normalized)
-key2 = "value2"
-
-// ============================================================
-// Test Case: Concatenation
-// ============================================================
-greeting = "Hello, "${name}"!"
-full-path = ${base-path}${config-path}
-
-// ============================================================
-// Test Case: Duration and Size Values
-// ============================================================
-timeout = 30
-max-size = 1024
-buffer-size = 4096
-
-// ============================================================
-// Test Case: Empty Values
-// ============================================================
+// Empty Values
 empty-object = {}
 empty-array = []
 empty-string = ""
