--- a/resource/cases/01-simple-key-value.conf
+++ b/resource/cases/01-simple-key-value.conf
@@ -1,4 +1,17 @@
-// Simple key-value pairs
+// ============================================================
+// INVALID (unformatted input)
+// ============================================================
+
+# hash comment style
+key:"value"
+name  :   "hoconfmt"
+version="1.0.0"
+
+// ============================================================
+// VALID (expected formatted output)
+// ============================================================
+
+// hash comment style
 key = "value"
 name = "hoconfmt"
 version = "1.0.0"
