--- a/resource/cases/02-dotted-key-paths.conf
+++ b/resource/cases/02-dotted-key-paths.conf
@@ -1,4 +1,17 @@
-// Dotted key paths
+// ============================================================
+// INVALID (unformatted input)
+// ============================================================
+
+# dotted paths with bad spacing
+server.host="localhost"
+server.port:8080
+database.connection.timeout =30
+
+// ============================================================
+// VALID (expected formatted output)
+// ============================================================
+
+// dotted paths with bad spacing
 server.host = "localhost"
 server.port = 8080
 database.connection.timeout = 30
