--- a/resource/cases/03-nested-objects.conf
+++ b/resource/cases/03-nested-objects.conf
@@ -1,4 +1,24 @@
-// Nested objects
+// ============================================================
+// INVALID (unformatted input)
+// ============================================================
+
+# nested objects with bad style
+server
+{
+    host = "localhost"
+     port = 8080
+  ssl
+  {
+enabled = true
+      certificate = "/path/to/cert.pem"
+  }
+}
+
+// ============================================================
+// VALID (expected formatted output)
+// ============================================================
+
+// nested objects with bad style
 server = {
   host = "localhost"
   port = 8080
