--- a/resource/cases/04-arrays-short.conf
+++ b/resource/cases/04-arrays-short.conf
@@ -1,4 +1,17 @@
-// Short arrays (single line)
+// ============================================================
+// INVALID (unformatted input)
+// ============================================================
+
+# short arrays no spaces
+ports=[8080,8081,8082]
+names:["alpha","beta","gamma"]
+enabled= [true,false,true]
+
+// ============================================================
+// VALID (expected formatted output)
+// ============================================================
+
+// short arrays no spaces
 ports = [8080, 8081, 8082]
 names = ["alpha", "beta", "gamma"]
 enabled = [true, false, true]
