--- a/resource/cases/05-arrays-long.conf
+++ b/resource/cases/05-arrays-long.conf
@@ -1,4 +1,15 @@
-// Long arrays (multi line)
+// ============================================================
+// INVALID (unformatted input)
+// ============================================================
+
+# long arrays on single line
+servers=["server1.example.com","server2.example.com","server3.example.com","server4.example.com","server5.example.com"]
+
+// ============================================================
+// VALID (expected formatted output)
+// ============================================================
+
+// long arrays on single line
 servers = [
   "server1.example.com"
   "server2.example.com"
