--- a/resource/cases/06-substitution.conf
+++ b/resource/cases/06-substitution.conf
@@ -1,4 +1,17 @@
-// Variable substitution
+// ============================================================
+// INVALID (unformatted input)
+// ============================================================
+
+# variable substitution bad spacing
+base-path="/app"
+config-path=${base-path}"/config"
+optional-path=${?CUSTOM_PATH}
+
+// ============================================================
+// VALID (expected formatted output)
+// ============================================================
+
+// variable substitution bad spacing
 base-path = "/app"
 config-path = ${base-path}"/config"
 optional-path = ${?CUSTOM_PATH}
