--- a/resource/cases/07-include.conf
+++ b/resource/cases/07-include.conf
@@ -1,3 +1,15 @@
-// Include statements
+// ============================================================
+// INVALID (unformatted input)
+// ============================================================
+
+# include with bad spacing
+include"common.conf"
+include  "database.conf"
+
+// ============================================================
+// VALID (expected formatted output)
+// ============================================================
+
+// include with bad spacing
 include "common.conf"
 include "database.conf"
