--- a/resource/cases/08-numbers.conf
+++ b/resource/cases/08-numbers.conf
@@ -1,4 +1,18 @@
-// Number values
+// ============================================================
+// INVALID (unformatted input)
+// ============================================================
+
+# numbers bad spacing
+integer:42
+negative=-10
+float  =  3.14159
+exponent=1.5e10
+
+// ============================================================
+// VALID (expected formatted output)
+// ============================================================
+
+// numbers bad spacing
 integer = 42
 negative = -10
 float = 3.14159
