--- a/resource/cases/09-booleans-null.conf
+++ b/resource/cases/09-booleans-null.conf
@@ -1,4 +1,17 @@
-// Booleans and null
+// ============================================================
+// INVALID (unformatted input)
+// ============================================================
+
+# booleans and null bad spacing
+enabled:true
+disabled=false
+empty  =  null
+
+// ============================================================
+// VALID (expected formatted output)
+// ============================================================
+
+// booleans and null bad spacing
 enabled = true
 disabled = false
 empty = null
