--- a/resource/cases/10-multiline-string.conf
+++ b/resource/cases/10-multiline-string.conf
@@ -1,4 +1,17 @@
-// Multi-line strings
+// ============================================================
+// INVALID (unformatted input)
+// ============================================================
+
+# multiline string bad spacing
+description="""This is a
+multi-line string
+with preserved newlines"""
+
+// ============================================================
+// VALID (expected formatted output)
+// ============================================================
+
+// multiline string bad spacing
 description = """This is a
 multi-line string
 with preserved newlines"""
