--- a/resource/cases/12-mixed-array.conf
+++ b/resource/cases/12-mixed-array.conf
@@ -1,4 +1,15 @@
-// Mixed array types
+// ============================================================
+// INVALID (unformatted input)
+// ============================================================
+
+# mixed array bad formatting
+mixed=["string",42,true,null]
+
+// ============================================================
+// VALID (expected formatted output)
+// ============================================================
+
+// mixed array bad formatting
 mixed = [
   "string"
   42
