--- a/resource/cases/13-comments.conf
+++ b/resource/cases/13-comments.conf
@@ -1,5 +1,19 @@
-// This is a slash comment
+// ============================================================
+// INVALID (unformatted input)
+// ============================================================
+
+# This is a hash comment
+key1="value1"
+
+# Another hash comment
+key2="value2"
+
+// ============================================================
+// VALID (expected formatted output)
+// ============================================================
+
+// This is a hash comment
 key1 = "value1"
 
-// This is another comment
+// Another hash comment
 key2 = "value2"
