--- a/resource/cases/14-concatenation.conf
+++ b/resource/cases/14-concatenation.conf
@@ -1,4 +1,18 @@
-// Concatenation
+// ============================================================
+// INVALID (unformatted input)
+// ============================================================
+
+# concatenation bad spacing
+name="World"
+greeting="Hello, "${name}"!"
+base-path="/app"
+config-path=${base-path}"/config"
+
+// ============================================================
+// VALID (expected formatted output)
+// ============================================================
+
+// concatenation bad spacing
 name = "World"
 greeting = "Hello, "${name}"!"
 base-path = "/app"
