--- a/resource/cases/15-empty-values.conf
+++ b/resource/cases/15-empty-values.conf
@@ -1,4 +1,17 @@
-// Empty values
+// ============================================================
+// INVALID (unformatted input)
+// ============================================================
+
+# empty values bad spacing
+empty-object={}
+empty-array=[]
+empty-string=""
+
+// ============================================================
+// VALID (expected formatted output)
+// ============================================================
+
+// empty values bad spacing
 empty-object = {}
 empty-array = []
 empty-string = ""
