--- a/resource/cases/11-complex-nested.conf
+++ b/resource/cases/11-complex-nested.conf
@@ -1,4 +1,33 @@
-// Complex nested structure
+// ============================================================
+// INVALID (unformatted input)
+// ============================================================
+
+# complex nested bad formatting
+application{
+name="MyApp"
+version="2.0.0"
+database{
+primary{
+host="db1.example.com"
+port=5432
+credentials{
+username=${secrets.db.username}
+password=${secrets.db.password}
+}
+}
+replica{host="db2.example.com"
+port=5432}
+}
+cache{redis{host="redis.example.com"
+port=6379
+ttl=3600}}
+}
+
+// ============================================================
+// VALID (expected formatted output)
+// ============================================================
+
+// complex nested bad formatting
 application = {
   name = "MyApp"
   version = "2.0.0"
