docs: add blank lines test case to resource files

--- a/resource/all-cases.conf
+++ b/resource/all-cases.conf
@@ -86,6 +86,16 @@ empty-object={}
 empty-array=[]
 empty-string=""
 
+# Blank Lines (multiple should collapse to single)
+blankA="first"
+
+
+blankB="second"
+
+
+
+blankC="third"
+
 // ============================================================
 // VALID (expected formatted output)
 // ============================================================
@@ -190,3 +200,10 @@ mixed = [
 empty-object = {}
 empty-array = []
 empty-string = ""
+
+// Blank Lines (preserved, max 1)
+blankA = "first"
+
+blankB = "second"
+
+blankC = "third"
