refactor: migrate linting from ESLint to StandardJS (ts-standard)

--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "build:umd": "esbuild src/index.ts --bundle --format=iife --global-name=hoconfmt --outfile=dist/hoconfmt.umd.js",
     "build:types": "tsc --emitDeclarationOnly --declaration --outDir dist/types",
     "build:cli": "esbuild src/cli.ts --bundle --format=esm --platform=node --outfile=bin/hoconfmt.js --external:glob --banner:js='#!/usr/bin/env node'",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
+    "lint": "ts-standard src/**/*.ts",
+    "lint:fix": "ts-standard --fix src/**/*.ts",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -55,12 +55,10 @@
   },
   "devDependencies": {
     "@types/node": "^24.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.13.0",
-    "@typescript-eslint/parser": "^6.13.0",
     "@vitest/coverage-v8": "^1.0.0",
     "esbuild": "^0.19.8",
-    "eslint": "^8.55.0",
     "glob": "^10.3.10",
+    "ts-standard": "^12.0.2",
     "typescript": "^5.3.2",
     "vitest": "^1.0.0"
   },
