fix: style fixes for concatenation quoting, comment handling, and substitution spacing
- Quote all value concatenations as single strings (60 seconds -> "60 seconds")
- Preserve original spacing in concatenations (60s stays "60s", 60 s stays "60 s")
- Add proper indentation for leading comments
- Preserve blank lines between consecutive comments
- No spaces added inside multiline string concatenations
- Preserve space between substitution and extending object (${ref} { })

--- a/resource/all-cases.conf
+++ b/resource/all-cases.conf
@@ -96,6 +96,20 @@ blankB="second"
 
 blankC="third"
 
+# Duration Values (concatenated values)
+timeout = 60 seconds
+delay = 2 s
+keepalive = 60s
+
+# Substitution Extension Pattern
+config = ${base.config} { key = "value" }
+
+# Comments with blank lines between
+# first comment
+
+# second comment after blank
+field = "value"
+
 // ============================================================
 // VALID (expected formatted output)
 // ============================================================
@@ -207,3 +221,19 @@ blankA = "first"
 blankB = "second"
 
 blankC = "third"
+
+// Duration Values (concatenated into single quoted string)
+timeout = "60 seconds"
+delay = "2 s"
+keepalive = "60s"
+
+// Substitution Extension Pattern (space preserved)
+config = ${base.config} {
+  key = "value"
+}
+
+// Comments with blank lines between (preserved)
+// first comment
+
+// second comment after blank
+field = "value"
