refactor: move style fix examples to existing case files
- 14-concatenation.conf: added duration value quoting examples
- 13-comments.conf: added comment indentation and blank line examples
- 06-substitution.conf: added substitution extension pattern
- Removed combined 17-style-fixes.conf

--- a/resource/cases/06-substitution.conf
+++ b/resource/cases/06-substitution.conf
@@ -7,6 +7,9 @@ base-path="/app"
 config-path=${base-path}"/config"
 optional-path=${?CUSTOM_PATH}
 
+# substitution extension pattern (space before object)
+extended-config = ${base.config} { key = "value" }
+
 // ============================================================
 // VALID (expected formatted output)
 // ============================================================
@@ -15,3 +18,8 @@ optional-path=${?CUSTOM_PATH}
 base-path = "/app"
 config-path = ${base-path}"/config"
 optional-path = ${?CUSTOM_PATH}
+
+// substitution extension pattern (space preserved)
+extended-config = ${base.config} {
+  key = "value"
+}
