--- a/resource/cases/13-comments.conf
+++ b/resource/cases/13-comments.conf
@@ -8,6 +8,18 @@ key1="value1"
 # Another hash comment
 key2="value2"
 
+# comment indentation in objects
+obj={
+      # over-indented comment
+key3="value3"
+}
+
+# blank lines between comments preserved
+# first comment
+
+# second comment after blank line
+key4="value4"
+
 // ============================================================
 // VALID (expected formatted output)
 // ============================================================
@@ -17,3 +29,15 @@ key1 = "value1"
 
 // Another hash comment
 key2 = "value2"
+
+// comment indentation in objects
+obj = {
+  // over-indented comment
+  key3 = "value3"
+}
+
+// blank lines between comments preserved
+// first comment
+
+// second comment after blank line
+key4 = "value4"
