--- a/resource/cases/14-concatenation.conf
+++ b/resource/cases/14-concatenation.conf
@@ -8,6 +8,11 @@ greeting="Hello, "${name}"!"
 base-path="/app"
 config-path=${base-path}"/config"
 
+# duration values (number + unit concatenation)
+timeout = 60 seconds
+delay = 2 s
+keepalive = 60s
+
 // ============================================================
 // VALID (expected formatted output)
 // ============================================================
@@ -17,3 +22,8 @@ name = "World"
 greeting = "Hello, "${name}"!"
 base-path = "/app"
 config-path = ${base-path}"/config"
+
+// duration values (combined into single quoted string)
+timeout = "60 seconds"
+delay = "2 s"
+keepalive = "60s"
