fix: preserve comment scope in nested objects

--- a/resource/all-cases.conf
+++ b/resource/all-cases.conf
@@ -110,6 +110,25 @@ config = ${base.config} { key = "value" }
 # second comment after blank
 field = "value"
 
+# Comment scope (comment before nested object should stay at root level)
+  // cache settings
+dragonfly = {
+  remote-cache = {
+    host = "localhost"
+    port = 6379
+  }
+}
+
+# Multiple comments before nested object (all should stay at root)
+// timeout configuration
+ // - less than default client timeout
+   // - twice of p99 latency
+timeout-config = {
+  settings = {
+    value = "2 s"
+  }
+}
+
 // ============================================================
 // VALID (expected formatted output)
 // ============================================================
@@ -237,3 +256,22 @@ config = ${base.config} {
 
 // second comment after blank
 field = "value"
+
+// Comment scope (comment stays at root level, not inside nested object)
+// cache settings
+dragonfly = {
+  remote-cache = {
+    host = "localhost"
+    port = 6379
+  }
+}
+
+// Multiple comments before nested object (all at root level)
+// timeout configuration
+// - less than default client timeout
+// - twice of p99 latency
+timeout-config = {
+  settings = {
+    value = "2 s"
+  }
+}
