--- a/resource/cases/13-comments.conf
+++ b/resource/cases/13-comments.conf
@@ -20,6 +20,24 @@ key3="value3"
 # second comment after blank line
 key4="value4"
 
+# comment scope: comment before nested object stays at root level
+  // cache settings
+dragonfly = {
+  remote-cache = {
+    host = "localhost"
+  }
+}
+
+# multiple comments before nested object
+// line 1
+ // line 2
+   // line 3
+nested = {
+  inner = {
+    key = "value"
+  }
+}
+
 // ============================================================
 // VALID (expected formatted output)
 // ============================================================
@@ -41,3 +59,21 @@ obj = {
 
 // second comment after blank line
 key4 = "value4"
+
+// comment scope: comment before nested object stays at root level
+// cache settings
+dragonfly = {
+  remote-cache = {
+    host = "localhost"
+  }
+}
+
+// multiple comments before nested object
+// line 1
+// line 2
+// line 3
+nested = {
+  inner = {
+    key = "value"
+  }
+}
