fix: preserve blank lines around comments
Fixed issue where blank lines before and after comments were stripped.

Changes:
- formatter.ts: Use first leadingComment precedingBlankLines for blank line before comments
- formatter.ts: Add blank line after leading comments when node has precedingBlankLines
- parser.ts: Save and restore pendingBlankLines in parseObject and parseArray to prevent scope leakage
- Added test cases for blank line preservation around comments
- Updated resource files with examples

--- a/resource/all-cases.conf
+++ b/resource/all-cases.conf
@@ -129,6 +129,25 @@ timeout-config = {
   }
 }
 
+# Blank lines before and after comments with object values
+obj1 = {
+  key1 = "value1"
+}
+
+// comment between objects
+
+obj2 = {
+  key2 = "value2"
+}
+
+# Blank line inside object with comment
+inner-obj = {
+  // inner comment
+  close-on-stop = false
+
+  dispatcher = "bounded"
+}
+
 // ============================================================
 // VALID (expected formatted output)
 // ============================================================
@@ -274,4 +293,23 @@ timeout-config = {
   settings = {
     value = "2 s"
   }
+}
+
+// Blank lines before and after comments with object values (preserved)
+obj1 = {
+  key1 = "value1"
+}
+
+// comment between objects
+
+obj2 = {
+  key2 = "value2"
+}
+
+// Blank line inside object with comment (preserved)
+inner-obj = {
+  // inner comment
+  close-on-stop = false
+
+  dispatcher = "bounded"
 }
