--- a/resource/cases/13-comments.conf
+++ b/resource/cases/13-comments.conf
@@ -38,6 +38,30 @@ nested = {
   }
 }
 
+# blank line before comment preserved
+field1="value1"
+
+// comment with blank line before
+field2="value2"
+
+# blank line after comment preserved
+field3="value3"
+// comment
+
+field4="value4"
+
+# blank lines before and after comments preserved
+obj2={
+  key1="value1"
+}
+
+// the default dispatcher
+// fixed-pool-size
+
+obj3={
+  key2="value2"
+}
+
 // ============================================================
 // VALID (expected formatted output)
 // ============================================================
@@ -76,4 +100,28 @@ nested = {
   inner = {
     key = "value"
   }
+}
+
+// blank line before comment preserved
+field1 = "value1"
+
+// comment with blank line before
+field2 = "value2"
+
+// blank line after comment preserved
+field3 = "value3"
+// comment
+
+field4 = "value4"
+
+// blank lines before and after comments preserved
+obj2 = {
+  key1 = "value1"
+}
+
+// the default dispatcher
+// fixed-pool-size
+
+obj3 = {
+  key2 = "value2"
 }
